changed individual cards in todays top stories section to a card-deck to make sure they all have uniform heights and equal spacing betweeen them all.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -20,3 +20,6 @@ label {
 #gameStrategies h2, p{
   text-align: center;
 }
+.card-deck {
+  margin-top: 1em;
+}
